trying to fix the alignment issue on heroku

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -106,8 +106,8 @@
   .card {
     max-width: 300px;
     min-width: 300px;
-    margin-left: 6vw;
-    margin-right: 6vw;
+    margin-left: 4vw;
+    margin-right: 4vw;
   }
 
   .card-img-top {
